2011-04-13  Juanma Barranquero  <lekktu@gmail.com>

	* ede.texi: Fix typos.

2011-04-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus.texi (Window Layout): @itemize @code doesn't exist.
	It's @table @code.

2011-03-19  Antoine Levitt  <antoine.levitt@gmail.com>

	* gnus.texi (Listing Groups): Document gnus-group-list-ticked

2011-03-17  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc.texi (Logarithmic Units): Update the function names.

2011-03-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.texi (Various Commands): Document format specs in the
	ellipsis.

2011-03-15  Antoine Levitt  <antoine.levitt@gmail.com>

	* message.texi (Insertion Variables): Document message-cite-style.

2011-03-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Remote processes): New subsection "Running shell on
	a remote host".

2011-03-12  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth.texi (Help for developers): Update docs to explain that the
	:save-function will only run the first time.

2011-03-12  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (emacs-faq.html): Fix some more cross-refs.
	(emacs-faq.text): New target.
	(clean): Add emacs-faq.

2011-03-12  Michael Albinus  <michael.albinus@gmx.de>

	Sync with Tramp 2.2.1.

	* trampver.texi: Update release number.

2011-03-11  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (HTML_TARGETS): New.
	(clean): Delete $HTML_TARGETS.
	(emacs-faq.html): New, for use with the gnu.org Emacs webpage.

2011-03-08  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth.texi (Help for developers): Show example of using
	`auth-source-search' with prompts and :save-function.

2011-03-07  Chong Yidong  <cyd@stupidchicken.com>

	* Version 23.3 released.

2011-03-07  Antoine Levitt  <antoine.levitt@gmail.com>

	* message.texi (Message Buffers): Update default value of
	message-generate-new-buffers.

2011-03-06  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc.texi (Logarithmic Units): Rename calc-logunits-dblevel